--- a/source/css/normalize.css
+++ b/source/css/normalize.css
@@ -209,7 +209,7 @@ kbd,
 pre,
 samp {
     font-family: monospace, serif;
-    _font-family: 'courier new', monospace;
+    _font-family: "courier new", monospace;
     font-size: 1em;
 }
 
@@ -237,7 +237,7 @@ q {
 
 q:before,
 q:after {
-    content: '';
+    content: "";
     content: none;
 }
 
