--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -18,10 +18,8 @@ html.no-js lang="en"
 
     / Place favicon.ico and apple-touch-icon.png in the root directory
 
-    link rel="stylesheet" href="css/normalize.css"
-    link rel="stylesheet" href="css/main.css"
-
-    script src="js/vendor/modernizr-2.6.1.min.js"
+    = stylesheet_link_tag "application"
+    = javascript_include_tag "vendor/modernizr"
 
   body
     /[if lte IE7]
@@ -34,12 +32,11 @@ html.no-js lang="en"
 
     = yield
 
-    script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"
+    = javascript_include_tag "//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"
     script
       ' window.jQuery || document.write('<script src="js/vendor/jquery-1.8.0.min.js"><\/script>')
 
-    script src="js/plugins.js"
-    script src="js/main.js"
+    = javascript_include_tag "js/application.js"
 
     / Google Analytics: change UA-XXXXX-X to be your site's ID.
     script
