--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -32,7 +32,7 @@ html.no-js lang="en"
 
     = yield
 
-    = javascript_include_tag "//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"
+    = javascript_include_tag "https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"
     script
       ' window.jQuery || document.write('<script src="js/vendor/jquery-1.8.0.min.js"><\/script>')
 
