Add basic initial index page

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -1,6 +1,7 @@
 ---
-title: HTML5 Boilerplate Middleman
+title: Brad Feehan
+meta_description: Brad Feehan, Melbourne Australia
 ---
 
-/ Add your site or application content here
-p Hello world! This is HTML5 Boilerplate.
+h1 Brad Feehan
+= image_tag "brad-feehan.jpg"
