--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -3,5 +3,6 @@ title: Brad Feehan
 meta_description: Brad Feehan, Melbourne Australia
 ---
 
-h1 Brad Feehan
-= image_tag "brad-feehan.jpg"
+header
+  = image_tag "brad-feehan.jpg", class: "avatar"
+  h1 Brad Feehan
