Add off-canvas menu

--- a/source/css/_settings.scss
+++ b/source/css/_settings.scss
@@ -1197,3 +1197,6 @@ $include-html-type-classes: true;
 // $include-html-visibility-classes: $include-html-classes;
 // $include-table-visibility-classes: true;
 // $include-legacy-visibility-classes: true;
+
+
+$include-html-off-canvas-classes: true;
