--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -30,7 +30,19 @@ html.no-js lang="en"
         a<> href="http://www.google.com/chromeframe/?redirect=true" install Google Chrome Frame
         | to better experience this site.
 
-    = yield
+    .off-canvas-wrap data-offcanvas=true
+      .inner-wrap
+        a.left-off-canvas-toggle Menu
+
+        nav.left-off-canvas-menu
+          ul.off-canvas-list
+            li: label Menu
+            li: a href="#" Home
+
+        section.main
+          = yield
+
+        a.exit-off-canvas Close
 
     = javascript_include_tag "https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"
     script
