--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -32,7 +32,9 @@ html.no-js lang="en"
 
     .off-canvas-wrap data-offcanvas=true
       .inner-wrap
-        a.left-off-canvas-toggle Menu
+        a.left-off-canvas-toggle
+          | Menu
+          span
 
         nav.left-off-canvas-menu
           ul.off-canvas-list
