--- a/source/css/application.css.scss
+++ b/source/css/application.css.scss
@@ -2,8 +2,9 @@
 @import "settings";
 @import "foundation";
 
+header, .content { padding: 20px; }
+
 header {
-	padding: 20px;
 	background: #eee;
 	text-align: center;
 	h1, h2, h3, h4, h5, h6 {
