--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -6,3 +6,11 @@ meta_description: Brad Feehan, Melbourne Australia
 header
   = image_tag "brad-feehan.jpg", class: "avatar"
   h1 Brad Feehan
+
+.content
+  p Hi, I'm Brad! I'm a web developer based in Melbourne, Australia.
+  p
+    ' I'm still working on this site, so it's a little light on content
+      at the moment. You can check out the source code
+    a href="https://github.com/bradfeehan/bradfeehan.github.io" here
+    ' .
