--- a/source/css/application.css.scss
+++ b/source/css/application.css.scss
@@ -5,10 +5,11 @@
 header, .content { padding: 20px; }
 
 header {
-	background: #eee;
+	background: #555;
 	text-align: center;
 	h1, h2, h3, h4, h5, h6 {
 		margin: {top: 20px; bottom: 0; };
+		color: white;
 	}
 }
 
