--- a/source/css/application.css.scss
+++ b/source/css/application.css.scss
@@ -7,11 +7,13 @@ header, .content { padding: 20px; }
 header {
 	background: #555;
 	text-align: center;
-	h1, h2, h3, h4, h5, h6 {
-		margin: {top: 20px; bottom: 0; };
+	h1 {
+		margin: 0;
 		color: white;
 	}
 }
+
+header .avatar { margin-bottom: 20px; }
 
 .avatar {
 	height: 200px;
