--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -14,3 +14,6 @@ header
       at the moment. You can check out the source code
     a href="https://github.com/bradfeehan/bradfeehan.github.io" here
     ' .
+
+footer
+  p Copyright (c) 2014 Brad Feehan
