--- a/source/css/application.css.scss
+++ b/source/css/application.css.scss
@@ -2,18 +2,21 @@
 @import "settings";
 @import "foundation";
 
-header, .content { padding: 20px; }
+header, .content, footer { padding: 20px; }
 
-header {
+header, footer {
 	background: #555;
 	text-align: center;
-	h1 {
+
+	h1, p {
 		margin: 0;
 		color: white;
 	}
 }
 
 header .avatar { margin-bottom: 20px; }
+
+footer p { font-size: smaller; }
 
 .avatar {
 	height: 200px;
