--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -36,13 +36,12 @@ html.no-js lang="en"
           | Menu
           span
 
-        nav.left-off-canvas-menu
-          ul.off-canvas-list
-            li: label Menu
-            li: a href="#" Home
+        = partial "page/navigation/off-canvas"
 
         section.main
-          = yield
+          = partial "page/header"
+          .content = yield
+          = partial "page/footer"
 
         a.exit-off-canvas Close
 
