--- a/source/partials/page/navigation/_off-canvas.slim
+++ b/source/partials/page/navigation/_off-canvas.slim
@@ -1,4 +1,5 @@
 nav.left-off-canvas-menu
   ul.off-canvas-list
     li: label Menu
-    li: a href="#" Home
+    li: a href="/" About
+    li: a href="/resume.html" Resume
