Attempt to fix off-canvas on iOS
Fix suggested here:

http://foundation.zurb.com/forum/posts/1651-cant-get-off-canvas-to-toggle-on-mobile?page=2

I figure it makes sense that Mobile Safari wouldn't trigger a click
event for tapping on an anchor without an href or a click event
listener.

--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -32,7 +32,7 @@ html.no-js lang="en"
 
     .off-canvas-wrap data-offcanvas=true
       .inner-wrap
-        a.left-off-canvas-toggle
+        a.left-off-canvas-toggle href="#"
           | Menu
           span
 
