--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -12,8 +12,8 @@ html.no-js lang="en"
     meta charset="utf-8"
     meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"
     / Use title if it's in the page YAML frontmatter
-    title= current_page.data.title || "HTML5 Boilerplate"
-    meta name="description" content=""
+    title = current_page.data.title || data.page.default_title
+    meta name="description" content=(current_page.data.meta_description || data.page.default_meta_description)
     meta name="viewport" content="width=device-width"
 
     / Place favicon.ico and apple-touch-icon.png in the root directory
