Disable zooming on iOS

--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -14,7 +14,7 @@ html.no-js lang="en"
     / Use title if it's in the page YAML frontmatter
     title = current_page.data.title || data.page.default_title
     meta name="description" content=(current_page.data.meta_description || data.page.default_meta_description)
-    meta name="viewport" content="width=device-width"
+    meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
 
     / Place favicon.ico and apple-touch-icon.png in the root directory
 
