Give body element a min-width of 180px
Let's be realistic..

--- a/source/css/application.css.scss
+++ b/source/css/application.css.scss
@@ -2,6 +2,8 @@
 @import "settings";
 @import "foundation";
 
+body { min-width: rem-calc(180); }
+
 header, .content, footer { padding: rem-calc(20); }
 
 header, footer {
