Add education section to resume

--- a/source/resume.html.slim
+++ b/source/resume.html.slim
@@ -5,3 +5,6 @@ meta_description: Resume of Brad Feehan, Melbourne Australia
 
 h2 Experience
 = partial "resume/job", collection: jobs
+
+h2 Education
+= partial "resume/course", collection: courses
