--- a/source/partials/page/navigation/_off-canvas.slim
+++ b/source/partials/page/navigation/_off-canvas.slim
@@ -2,4 +2,5 @@ nav.left-off-canvas-menu
   ul.off-canvas-list
     li: label Menu
     li: a href="/" About
-    li: a href="/resume.html" Resume
+    li: a href="/resume" Resume
+    li: a href="/blog" Blog
