Add blog and first blog post

--- a/source/partials/page/navigation/_off-canvas.slim
+++ b/source/partials/page/navigation/_off-canvas.slim
@@ -3,3 +3,4 @@ nav.left-off-canvas-menu
     li: label Menu
     li: a href="/" About
     li: a href="/resume.html" Resume
+    li: a href="/blog/index.html" Blog
