Use link_to view helper

--- a/source/partials/page/navigation/_off-canvas.slim
+++ b/source/partials/page/navigation/_off-canvas.slim
@@ -1,6 +1,6 @@
 nav.left-off-canvas-menu
   ul.off-canvas-list
     li: label Menu
-    li: a href="/" About
-    li: a href="/resume" Resume
-    li: a href="/blog" Blog
+    li = link_to "About", "/"
+    li = link_to "Resume", "/resume"
+    li = link_to "Blog", "/blog"
