Fix broken images in blog

--- a/source/blog/2014-04-27-how-i-built-this-site.markdown.erb
+++ b/source/blog/2014-04-27-how-i-built-this-site.markdown.erb
@@ -27,7 +27,7 @@ but there are rare occasions where I have to turn my computer off.
 Whenever my laptop is off, visitors would see an error message instead
 of my website.
 
-![404](blog/how-i-built-this-site/oops-google-chrome-could-not-connect-to-bradfeehan-com.png)
+![404](<%= current_page.url %>index/oops-google-chrome-could-not-connect-to-bradfeehan-com.png)
 
 Running the website on my computer is actually useful, though. When I'm
 thinking of making changes to the website, I can test them out on a
