--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -21,6 +21,15 @@ html.no-js lang="en"
     = stylesheet_link_tag "application"
     = javascript_include_tag "vendor/modernizr"
 
+    / Google Analytics
+    script
+      ' (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      ' (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      ' m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      ' })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      = "ga('create', '#{data.analytics.ga.tracking_code}', '#{data.analytics.ga.domain}'); "
+      ' ga('send', 'pageview');
+
   body class="page-key--#{current_page_key}"
     /[if lte IE7]
       p.chromeframe
@@ -50,10 +59,3 @@ html.no-js lang="en"
       ' window.jQuery || document.write('<script src="js/vendor/jquery-1.8.0.min.js"><\/script>')
 
     = javascript_include_tag "js/application.js"
-
-    / Google Analytics: change UA-XXXXX-X to be your site's ID.
-    script
-      ' var _gaq=[["_setAccount","UA-XXXXX-X"],["_trackPageview"]];
-      ' (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-      ' g.src=("https:"==location.protocol?"//ssl":"//www")+".google-analytics.com/ga.js";
-      ' s.parentNode.insertBefore(g,s)}(document,"script"));
