--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -28,6 +28,7 @@ html.no-js lang="en"
       ' m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       ' })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
       = "ga('create', '#{data.analytics.ga.tracking_code}', '#{data.analytics.ga.domain}'); "
+      ' ga('require', 'displayfeatures');
       ' ga('send', 'pageview');
 
   body class="page-key--#{current_page_key}"
